# ai-travel-assistant

./: .gitignore  Makefile  README.md  RUNBOOK.md
.cursor/rules/: 00-context.mdc  10-workflow.mdc  20-tdd-testing.mdc  30-aws-terraform.mdc  40-logging-observability.mdc
.cursor/rules/.cursor/rules/: 00-context.mdc  00-workflow.mdc
contracts/: README.md  feedback_event.schema.json  graph_rag.schema.json  memory_summary.schema.json  product_candidates.schema.json  stt_transcript.schema.json  travel_evidence.schema.json  tts_audio.schema.json  vision_signals.schema.json
docs/: IMPLEMENTATION_PLAN.md  OWNERSHIP.md  testing-real.md
docs/experiments/: ingestion_pipeline.md  retrieval_baseline.md  weaviate_schema.md
docs/images_vision_test_cases/: README.md
docs/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4-2-real-ingestion.md  phase-4-3-graph-database-ingestion.md  phase-4.md  phase-5-graph-rag.md  phase-5.md  phase-6-vision.md  phase-6.md  phase-7-audio.md  phase-8.md  phase-9.md
infra/terraform/: README.md  iam-terraform-user-policy.json  main.tf  outputs.tf  variables.tf
infra/terraform/ingestion/: main.tf  outputs.tf  variables.tf
scripts/: assess_ingestion_via_mcp.py  prepare_vision_eval_queries.py  send_graph_ingestion.py  send_playlist_ingestion.py  smoke_retrieval.sh
services/agent-api/: pyproject.toml
services/agent-api/agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/agent-api/app/: contracts.py  eval_diff.py  eval_runner.py  feedback_store.py  guardrails.py  judge.py  main.py  mcp_client.py  memory_store.py  tracing.py
services/agent-api/app/schemas/: eval_row.schema.json
services/agent-api/tests/: test_audio_mcp.py  test_eval_diff.py  test_eval_runner.py  test_feedback.py  test_graph_mcp.py  test_guardrails.py  test_judge.py  test_memory.py  test_smoke.py  test_tracing.py  test_vision_mcp.py  test_ws_mcp.py
services/agent-api/tests/fixtures/: eval_a.jsonl  eval_b.jsonl
services/ingestion/: pyproject.toml
services/ingestion/app/: aws_worker.py  dlq.py  events.py  idempotency.py  main.py  pipeline.py  replay_dlq.py  weaviate_schema.py
services/ingestion/app/sources/: __init__.py  graph.py  products.py  youtube.py
services/ingestion/scripts/: inspect_neo4j.py
services/ingestion/tests/: test_dlq.py  test_graph_ingestion.py  test_pipeline.py  test_real_ingestion.py
services/mcp-travel-graph/: pyproject.toml
services/mcp-travel-graph/app/: __init__.py  adapter.py  cache.py  logging_utils.py  main.py  metrics.py  models.py  retrieval.py
services/mcp-travel-graph/tests/: __init__.py  test_cache.py  test_metrics.py  test_retrieval_fallback.py  test_smoke.py
services/mcp-travel-graph/tests/unit/: test_adapter.py
services/mcp-travel-knowledge/: pyproject.toml
services/mcp-travel-knowledge/app/: adapter.py  cache.py  logging_utils.py  main.py  metrics.py  models.py  retrieval.py  weaviate_schema.py
services/mcp-travel-knowledge/tests/: test_cache.py  test_metrics.py  test_retrieval_fallback.py  test_smoke.py
services/mcp-travel-knowledge/tests/unit/: test_adapter.py
services/mcp-travel-products/: pyproject.toml
services/mcp-travel-products/app/: adapter.py  cache.py  logging_utils.py  main.py  models.py  retrieval.py  weaviate_schema.py
services/mcp-travel-products/tests/: test_adapter.py  test_cache.py  test_metrics.py  test_smoke.py
services/mcp-travel-stt/: pyproject.toml
services/mcp-travel-stt/app/: __init__.py  logging_utils.py  main.py  models.py  transcribe.py
services/mcp-travel-stt/tests/: __init__.py  test_metrics.py  test_smoke.py
services/mcp-travel-stt/tests/unit/: __init__.py  test_transcribe.py
services/mcp-travel-tts/: pyproject.toml
services/mcp-travel-tts/app/: __init__.py  logging_utils.py  main.py  metrics.py  models.py  synthesize.py
services/mcp-travel-tts/tests/: __init__.py  test_metrics.py  test_smoke.py
services/mcp-travel-tts/tests/unit/: __init__.py  test_synthesize.py
services/mcp-travel-vision/: pyproject.toml
services/mcp-travel-vision/app/: __init__.py  cache.py  logging_utils.py  main.py  metrics.py  models.py  prompts.py  vision.py
services/mcp-travel-vision/tests/: __init__.py  test_cache.py  test_metrics.py  test_smoke.py  test_vision_images.py
services/mcp-travel-vision/tests/unit/: test_vision.py
